--- a/WebApplicationDevelopment/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplicationDevelopment/Views/Shared/_LoginPartial.cshtml
@@ -17,6 +17,22 @@ else
 {
     <ul class="nav navbar-nav navbar-right">
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-        <li>@Html.ActionLink("Log in", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+        <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
+            <div class="dropdown-menu" style="padding:5px; background-color: #333;">
+                <div class="input-group">
+                    <form runat="server" name="login">
+                        <input type="text" name="username" class="form-control" placeholder="Username" />
+                        <br />
+                        <br />
+                        <input type="password" name="password" class="form-control" placeholder="Password" />
+                        <br />
+                        <br />
+                        <input type="submit" name="submit" class="btn btn-default" />
+                    </form>
+                </div>
+               
+            </div>
+        </li>
     </ul>
 }
