--- a/WebApplicationDevelopment/Views/Shared/_LoginPartial.cshtml
+++ b/WebApplicationDevelopment/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNet.Identity
+@using WebApplicationDevelopment.Models
+@model LoginViewModel
+
 @if (Request.IsAuthenticated)
 {
     using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm", @class = "navbar-right" }))
@@ -19,20 +22,21 @@ else
         <li>@Html.ActionLink("Register", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
         <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Login <b class="caret"></b></a>
-            <div class="dropdown-menu" style="padding:5px; background-color: #333;">
-                <div class="input-group">
-                    <form runat="server" name="login">
-                        <input type="text" name="username" class="form-control" placeholder="Username" />
-                        <br />
-                        <br />
-                        <input type="password" name="password" class="form-control" placeholder="Password" />
-                        <br />
-                        <br />
-                        <input type="submit" name="submit" class="btn btn-default" />
-                    </form>
+            <div class="dropdown-menu" style="padding:10px; background-color: #222;">
+                    @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new {role = "form" }))
+                    {
+                        @Html.AntiForgeryToken()
+                        <div class="form-group">
+                            @Html.TextBoxFor(m => m.Email, new { @class = "form-control", @placeholder = "Email" })
+                            @Html.ValidationMessageFor(m => m.Email, "", new { @class = "text-danger" })
+                        </div>
+                        <div class="form-group">
+                            @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = "Password" })
+                            @Html.ValidationMessageFor(m => m.Password, "", new { @class = "text-danger" })
+                        </div>
+                        <input class="btn btn-primary" style="clear: left; width: 100%; height: 32px; font-size: 13px;" type="submit" name="commit" value="Log in" />
+                    }
                 </div>
-               
-            </div>
         </li>
     </ul>
 }
