--- a/WebApplicationDevelopment/Views/Home/About.cshtml
+++ b/WebApplicationDevelopment/Views/Home/About.cshtml
@@ -1,7 +1,38 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About Bull Market Analysis";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<!------------- BACKGROUND GRAPHIC ----------------------->
+<div style="background-image: url('Images/BullMarket.png'); background-size:100%; height: 650px; width: 975px; margin-top:0px; background-repeat: no-repeat;">
+    <div class="form-group" style="position:relative; top: 370px; left: 40px;"></div>
+</div>
+
+<br />
+<br />
+
+<!-------------------- QUOTE ----------------------------->
+<blockquote>
+    <p>“Bull Market Analysis is the most user-friendly market watch tool that I have ever used. I just log in and watch my money grow."</p>
+    <small>Trent Merrell</small>
+</blockquote>
+
+<h3>What is a Bull Market Analysis?</h3>
+    <p>This is where we put a description of our app and what it does...</p>
+
+<h3>The Bull Market Analysis Team:</h3>
+
+    <div class="panel panel-default panel-info">
+        <div class="panel-heading">
+            Brandon Thompson
+        </div>
+        
+        <div class="panel-body">
+            <div style="float:left; height:100%">
+                <img runat="server" style="width:2.70in" src="_____" />
+                <p>Information about Brandon</p>
+            </div>
+        </div>
+
+    </div>
