--- a/WebApplicationDevelopment/Views/Home/Index.cshtml
+++ b/WebApplicationDevelopment/Views/Home/Index.cshtml
@@ -3,8 +3,8 @@
 }
 
 <div class="jumbotron">
-    <h1>Bear Market Analysis</h1>
-    <p class="lead">Bear Market Analysis is the premier site to monitor your portfolio and track securities of interest.</p>
+    <h1>Bull Market Analysis</h1>
+    <p class="lead">Bull Market Analysis is the premier site to monitor your portfolio and track securities of interest.</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
