Updated CSS / About Page   * Created new CSS file so we can use template code   * Old CSS files are saves as OriginalBootstrap   * Added more div for each team member   * Tried to get images to work, but must not be using the right filepath?

--- a/WebApplicationDevelopment/Views/Home/About.cshtml
+++ b/WebApplicationDevelopment/Views/Home/About.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
     ViewBag.Title = "About Bull Market Analysis";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
+<h2>Title</h2>
+<h3>Message</h3>
 
 <!------------- BACKGROUND GRAPHIC ----------------------->
-<div style="background-image: url('Images/BullMarket.png'); background-size:100%; height: 650px; width: 975px; margin-top:0px; background-repeat: no-repeat;">
-    <div class="form-group" style="position:relative; top: 370px; left: 40px;"></div>
-</div>
+    
+    <img src="~/Home/Images/BullMarket.png" />
+    
 
 <br />
 <br />
@@ -18,21 +18,85 @@
     <small>Trent Merrell</small>
 </blockquote>
 
+<br />
+
+
+<!-------------------- WEB-APP DESCRIPTION ---------------->
 <h3>What is a Bull Market Analysis?</h3>
     <p>This is where we put a description of our app and what it does...</p>
 
+
+<br />
+<br />
+
+<!-------------------- TEAM INFORMATION ------------------->
 <h3>The Bull Market Analysis Team:</h3>
 
-    <div class="panel panel-default panel-info">
+
+<!-------------------- BRANDON ----------------------------->
+    <div class="panel panel-default ">
         <div class="panel-heading">
-            Brandon Thompson
+            <strong>Brandon Thompson</strong>
         </div>
         
         <div class="panel-body">
             <div style="float:left; height:100%">
                 <img runat="server" style="width:2.70in" src="_____" />
+            </div>
+            
+            <div style="margin-left: 2.8in">
                 <p>Information about Brandon</p>
             </div>
         </div>
-
     </div>
+
+<!-------------------- DAN ----------------------------->
+<div class="panel panel-default ">
+    <div class="panel-heading">
+        <strong>Dan Cole</strong>
+    </div>
+
+    <div class="panel-body">
+        <div style="float:left; height:100%">
+            <img runat="server" style="width:2.70in" src="_____" />
+        </div>
+
+        <div style="margin-left: 2.8in">
+            <p>Information about Dan</p>
+        </div>
+    </div>
+</div>
+
+<!-------------------- JT ----------------------------->
+<div class="panel panel-default ">
+    <div class="panel-heading">
+        <strong>JT Green</strong>
+    </div>
+
+    <div class="panel-body">
+        <div style="float:left; height:100%">
+            <img runat="server" style="width:2.70in" src="_____" />
+        </div>
+
+        <div style="margin-left: 2.8in">
+            <p>Information about JT</p>
+        </div>
+    </div>
+</div>
+
+<!-------------------- TRENT ----------------------------->
+<div class="panel panel-default ">
+    <div class="panel-heading">
+        <strong>Trent Merrell</strong>
+    </div>
+
+    <div class="panel-body">
+        <div style="float:left; height:100%">
+            <img runat="server" style="width:2.70in" src="_____" />
+        </div>
+
+        <div style="margin-left: 2.8in">
+            <p>Information about Trent</p>
+        </div>
+    </div>
+</div>
