Changed the heading

--- a/WebApplicationDevelopment/Views/Home/About.cshtml
+++ b/WebApplicationDevelopment/Views/Home/About.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
     ViewBag.Title = "About Bull Market Analysis";
 }
-<h2>Title</h2>
-<h3>Message</h3>
+<h2>About Us</h2>
+
 
 <!------------- BACKGROUND GRAPHIC ----------------------->
     
-    <img src="~/Home/Images/BullMarket.png" />
+    <img src="~/Images/BullMarket.png" />
     
 
 <br />
