--- a/WebApplicationDevelopment/Views/Stocks/Delete.cshtml
+++ b/WebApplicationDevelopment/Views/Stocks/Delete.cshtml
@@ -18,11 +18,11 @@
         <hr />
         <dl class="dl-horizontal">
             <dt>
-                @Html.DisplayNameFor(model => model.currentPrice)
+                @Html.DisplayNameFor(model => model.lastPrice)
             </dt>
     
             <dd>
-                @Html.DisplayFor(model => model.currentPrice)
+                @Html.DisplayFor(model => model.lastPrice)
             </dd>
     
         </dl>
