--- a/WebApplicationDevelopment/Views/Stocks/Edit.cshtml
+++ b/WebApplicationDevelopment/Views/Stocks/Edit.cshtml
@@ -27,10 +27,10 @@
             @Html.HiddenFor(model => model.symbol)
     
             <div class="form-group">
-                @Html.LabelFor(model => model.currentPrice, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.lastPrice, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.currentPrice, new { htmlAttributes = new { @class = "form-control" } })
-                    @Html.ValidationMessageFor(model => model.currentPrice, "", new { @class = "text-danger" })
+                    @Html.EditorFor(model => model.lastPrice, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.lastPrice, "", new { @class = "text-danger" })
                 </div>
             </div>
     
