add initial quote lookup code

--- a/WebApplicationDevelopment/Views/Shared/_Layout.cshtml
+++ b/WebApplicationDevelopment/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <title>@ViewBag.Title - Bull Market Analysis</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    @Scripts.Render("~/Scripts/stock.lookup.js")
 
 </head>
 <body>
