--- a/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
+++ b/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
@@ -12,12 +12,7 @@
 
 <!-- Tab panes -->
 <div class="tab-content">
-    <div class="tab-pane active" id="portfolio">
-        <p>
-            <input id="lookupSymbol" type="text" /><button onclick="javascript: lookupStock()">lookup</button>
-        </p>
-        <div id="quoteResults" style="display:none;"></div>
-    </div>
+    <div class="tab-pane active" id="portfolio">...</div>
     <div class="tab-pane" id="profile">...</div>
     <div class="tab-pane" id="preferences">...</div>
 </div>
