more stuff for stock lookup

--- a/WebApplicationDevelopment/Content/Site.css
+++ b/WebApplicationDevelopment/Content/Site.css
@@ -15,3 +15,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.stock-lookup {
+    background-color: #EE6612;
+}
+
+.lookup-quote-results {
+    background-color: #EE6612;    
+}
