--- a/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
+++ b/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
@@ -16,7 +16,7 @@
         <!----------------------Stock Looup------------------------------>
         <div class="stock-lookup">
             <p>
-                <input id="lookupSymbol" type="text" /><button onclick="javascript: lookupStock()">lookup</button>
+                <input id="lookupSymbol" type="text" /><button class="button_secondary" onclick="javascript: lookupStock()">lookup</button>
             </p>
             <div id="quoteResults" class="lookup-quote-results" style="display:none;"></div>
         </div>
