--- a/WebApplicationDevelopment/Views/Home/About.cshtml
+++ b/WebApplicationDevelopment/Views/Home/About.cshtml
@@ -6,7 +6,7 @@
 
 <!------------- BACKGROUND GRAPHIC ----------------------->
 
-<img src="@Server.MapPath("~/Images/BullMarket.png")" alt="BullMarket Bull" />
+<img style="width:5in; height:3in;" src="@Url.Content("~/Images/BullMarket.jpg")" alt="BullMarket Bull" />
 
 <br />
 <br />
@@ -41,7 +41,7 @@
 
     <div class="panel-body">
         <div style="float:left; height:100%">
-            <img style="width:2.70in" src="@Url.Content("~/Images/BThompson.jpg")" alt="BThompson" />
+            <img style="width:370px; height:370px;" src="@Url.Content("~/Images/BThompson.jpg")" alt="BThompson" />
         </div>
 
         <div style="margin-left: 2.8in">
@@ -59,7 +59,7 @@
 
     <div class="panel-body">
         <div style="float:left; height:100%">
-            <img runat="server" style="width:2.70in" src="@Url.Content("~/Images/DCole.jpg")" alt="DCole" />
+            <img runat="server" style="width:370px; height:370px;" src="@Url.Content("~/Images/DCole.jpg")" alt="DCole" />
         </div>
 
         <div style="margin-left: 2.8in">
@@ -77,7 +77,7 @@
 
     <div class="panel-body">
         <div style="float:left; height:100%">
-            <img runat="server" style="width:2.70in" src="@Url.Content("~/Images/JTGreen.jpg")" alt="JTGreen" />
+            <img runat="server" style="width:370px; height:370px;" src="@Url.Content("~/Images/JGreen.jpg")" alt="JTGreen" />
         </div>
 
         <div style="margin-left: 2.8in">
@@ -95,7 +95,7 @@
 
     <div class="panel-body">
         <div style="float:left; height:100%">
-            <img runat="server" style="width:2.70in" src="@Url.Content("~/Images/TMerrell.jpg")" alt="TMerrell" />
+            <img runat="server" style="width:370px; height:370px;" src="@Url.Content("~/Images/TMerrell.jpg")" alt="TMerrell" />
         </div>
 
         <div style="margin-left: 2.8in">
