Account controller updates

--- a/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
+++ b/WebApplicationDevelopment/Views/Account/MyAccounts.cshtml
@@ -12,9 +12,39 @@
 
 <!-- Tab panes -->
 <div class="tab-content">
-    <div class="tab-pane active" id="portfolio">...</div>
-    <div class="tab-pane" id="profile">...</div>
-    <div class="tab-pane" id="preferences">...</div>
+    <div class="tab-pane active" id="portfolio">
+
+
+    </div>
+
+    <div class="tab-pane" id="profile">
+        <!-- 
+                a) Display current profile information
+                b) Update profile data via button/Javascript form
+                c) Example data: 
+                    - First Name
+                    - Last Name
+                    - Phone Number (text notifications)
+                    - Age
+                    - Risk Tolerance
+                    - Preferred securities (e.g., mutual funds, ETFs, bonds)
+                    - Experience level
+                    - Industry preference
+        -->
+        
+    </div>
+
+    <div class="tab-pane" id="preferences">
+        <!-- 
+                a) Setting preferences
+                b) Stock notification registration
+                    - Text
+                    - Email
+                c) Connect to Social Media            
+            
+        -->
+
+    </div>
 </div>
 
 @Scripts.Render("~/bundles/AccountTabs")
