Removed remaining ASP tutorial links

--- a/WebApplicationDevelopment/Views/Home/Index.cshtml
+++ b/WebApplicationDevelopment/Views/Home/Index.cshtml
@@ -15,16 +15,16 @@
         <p>
             Simply register for free, add your stocks, and expand your potential!
         </p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Account/Register">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Philosophy</h2>
         <p>We belive in providing the latest data about your portfolio while protecting your information.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Home/About">Learn more &raquo;</a></p>
     </div>
     <div class="col-md-4">
         <h2>Contact us</h2>
         <p>We are always willing to provide any other information you desire.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="~/Home/Contact">Learn more &raquo;</a></p>
     </div>
 </div>
