--- a/WebApplicationDevelopment/Views/Home/About.cshtml
+++ b/WebApplicationDevelopment/Views/Home/About.cshtml
@@ -5,8 +5,8 @@
 
 
 <!------------- BACKGROUND GRAPHIC ----------------------->
-
-<img style="width:5in; height:3in;" src="@Url.Content("~/Images/BullMarket.jpg")" alt="BullMarket Bull" />
+<div>
+<img style="width:1130px; height:325px; margin:auto; left:0; right:0;" src="@Url.Content("~/Images/StockTicker.jpg")" alt="Stock Ticker" />
 
 <br />
 <br />
@@ -22,9 +22,15 @@
 
 <!-------------------- WEB-APP DESCRIPTION ---------------->
 <h3>How BullMarket Analysis started...</h3>
-<p>Add the history of the concept</p>
-<p>CS601 - BackRow Group history?</p>
-
+<br />
+    <h4>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspThe Bull Market Analysis team met coincidentally through a Summer Web Application Development course taught at Boston University during 
+    the summer of 2014. On the first day of class, Professor Raj Heda asked the class to carry out a get-to-know-your-neighbor game wherein
+    each of the students were assigned to get to know someone sitting near them and subsequently introduce that person to the rest of the 
+    class. Through that activity and several others, an unbreakable bond was formed between the four men of the back row.</h4> 
+<br />    
+    <h4>&nbsp&nbsp&nbsp&nbsp&nbsp&nbspHours later, the BackRow Group was formed, dreams and aspirations shared, and the concept of the BullMarket Watch application took root.  Over the course
+    of the semester, the BackRow Group experienced many ups and downs, but together they accomplished something great and wonderful, together
+    they created a web-application that at least one person has called "the greatest market watch tool to ever be created".</h4>
 
 <br />
 <br />
@@ -44,7 +50,7 @@
             <img style="width:370px; height:370px;" src="@Url.Content("~/Images/BThompson.jpg")" alt="BThompson" />
         </div>
 
-        <div style="margin-left: 2.8in">
+        <div style="margin-left: 390px">
             <p>Brandon currently works as a Lead Engineer for the Upgraded Early Warning Radar group within the United States Air Force at Hanscom Air Force Base in Massachussets.</p>
             <p>Among his duties as Lead Engineer, Brandon oversees the planning and execution of technical requirements on multiple ground based early warning radars, collaborates and evaluates hardware and software design elements during the migration of computer architectures ensuring the system meets all performance specifications, and leads the 12 man acquisition logistics team in evaluating and executing training, maintenance operations, and spare part procurement for the lifetime of the system.</p>
         </div>
@@ -62,7 +68,7 @@
             <img runat="server" style="width:370px; height:370px;" src="@Url.Content("~/Images/DCole.jpg")" alt="DCole" />
         </div>
 
-        <div style="margin-left: 2.8in">
+        <div style="margin-left: 390px">
             <p>Dan currently works in Boston's Back Bay as a Development Manager at MacMillan, a privately held international publishing company.</p>
             <p>As Development Manager, Dan manages the systems integration development team. Under Dan's direction, his development team has facilitated a company transition betweeen software development methodologies, integrated Macmillan systems with third-party applications, developed modules and database-driven Web applications using PHP, Classic ASP, Java, C# .NET, JavaScript, and libraries/APIs such as jQuery and CKeditor and has performed many other management tasks.</p>
         </div>
@@ -80,7 +86,7 @@
             <img runat="server" style="width:370px; height:370px;" src="@Url.Content("~/Images/JGreen.jpg")" alt="JTGreen" />
         </div>
 
-        <div style="margin-left: 2.8in">
+        <div style="margin-left: 390px">
             <p>JT currently works as a Project Engineer in the Upgraded Early Warning Radar group with the United States Air Force at Hanscom Air Force Base in Massachussets.</p>
             <p>As a Project Engineer, JT supports UEWR system rehost to RHEL 6 OS as the Software IPT Lead, manages a Software Deficiency team focused towards resolution of software defects, acts as technical lead to threat database upgrade - supporting Ballistic Missile Defense System (BMDS) objectives, contributes to multiple test reviews and events, implements technical requirements for STRATCOM, NORTHCOM, Missile Defense Agency, and AFSPC, and many other tasks.</p>
         </div>
@@ -98,9 +104,10 @@
             <img runat="server" style="width:370px; height:370px;" src="@Url.Content("~/Images/TMerrell.jpg")" alt="TMerrell" />
         </div>
 
-        <div style="margin-left: 2.8in">
+        <div style="margin-left: 390px">
             <p>Trent currently works as an Attorney and Patent Analyst with Global Patent Solutions in Scottsdale, Arizona.</p>
             <p>As an Attorney and Patent Analyst, Trent works as a contracted International Search Agent for the United States Patent and Trademark Office (USPTO), wherein he analyzes international Patent Cooperation Treaty (PCT) patent applications, performs a non-binding patent examination, and drafts patentability opinions therefrom.</p>
         </div>
     </div>
+</div>
 </div>
