Index Page: * Redirected the link within the jumbotron, so it goes to our About page and not ASP.net. *resized the image.

--- a/WebApplicationDevelopment/Views/Home/Index.cshtml
+++ b/WebApplicationDevelopment/Views/Home/Index.cshtml
@@ -5,10 +5,10 @@
 <br />
 <div class="jumbotron">
     <div>
-        <img style="width:101%; height:35%; margin:auto; left:0; right:0;" src="@Url.Content("~/Images/BullMarket2.jpg")" alt="Stock Ticker" />
+        <img style="width:101%; height:30%; margin:auto; left:0; right:0;" src="@Url.Content("~/Images/BullMarket2.jpg")" alt="Stock Ticker" />
         <h1>Bull Market Analysis</h1>
         <p class="lead">Bull Market Analysis is the premier site to monitor your portfolio and track securities of interest.</p>
-        <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+        <p><a href="~/Home/About" class=" btn btn-primary btn-lg">Learn more &raquo;</a></p>
     </div>
 </div>
 
