Global Footer: * Added a link to the Contact Page in the footer.

--- a/WebApplicationDevelopment/Views/Shared/_Layout.cshtml
+++ b/WebApplicationDevelopment/Views/Shared/_Layout.cshtml
@@ -46,6 +46,7 @@
         <hr />
         <footer>
             <p>&copy; @DateTime.Now.Year - Bull Market Analysis</p>
+            <p>If you have any comments, questions, or concerns: <a href="~/Home/Contact">Contact Bull Market Analysis.</a></p>
         </footer>
     </div>
 
